fixed container issue with header on mobile ui

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -100,7 +100,7 @@ nav a:hover {
 .img-fluid-custom {
     width: 75%;
     height: 75%;
-    margin: 0 60px;
+    margin: 0 10%;
 }
 
 .main-card-body {
@@ -230,5 +230,17 @@ footer {
 @media screen and (max-width: 410px) {
     .quote p {
         font-size: 20px;
+    }
+}
+
+@media screen and (max-width: 370px) {
+    .quote p {
+        font-size: 18px;
+    }
+}
+
+@media screen and (max-width: 345px) {
+    .quote p {
+        font-size: 16px;
     }
 }
